--- a/TestAutomation.QAWorks/TestAutomation.QAWorks.Web.Driver/TestAutomation.QAWorks.Web.Driver.csproj
+++ b/TestAutomation.QAWorks/TestAutomation.QAWorks.Web.Driver/TestAutomation.QAWorks.Web.Driver.csproj
@@ -32,15 +32,54 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebDriver, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.3.0.1\lib\net40\WebDriver.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WebDriver.Support, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.3.0.1\lib\net40\WebDriver.Support.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drivers\ChromeQAWebDriver.cs" />
+    <Compile Include="Drivers\FirefoxQAWebDriver.cs" />
+    <Compile Include="Drivers\IeQAWebDriver.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Drivers\PhantomJSQAWebDriver.cs" />
+    <Compile Include="Drivers\QAWebDriver.cs" />
+    <Compile Include="Enum\WebDriverInstanceType.cs" />
+    <Compile Include="Exceptions\DuplicateWebDriverInstanceTypeException.cs" />
+    <Compile Include="Exceptions\InvalidWebDriverInstanceTypeException.cs" />
+    <Compile Include="Exceptions\NotImplementedWebDriverInstanceTypeException.cs" />
+    <Compile Include="Extension\WebElementExtension.cs" />
+    <Compile Include="Interface\IQAWebDriver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="chromedriver.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="geckodriver.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="IEDriverServer.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="phantomjs.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
