004- Other scenarios 005- Parellel Execution (refactored ScenarioContext.current usage) 006 - Negative Scenarios

--- a/TestAutomation.QAWorks/TestAutomation.QAWorks.Web.Pages/TestAutomation.QAWorks.Web.Pages.csproj
+++ b/TestAutomation.QAWorks/TestAutomation.QAWorks.Web.Pages/TestAutomation.QAWorks.Web.Pages.csproj
@@ -53,6 +53,7 @@
     <Compile Include="PageObjects\ContactPage.cs" />
     <Compile Include="PageObjects\HomePage.cs" />
     <Compile Include="PageObjects\MainPage.cs" />
+    <Compile Include="PageObjects\PostSubmissionPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QAWorksUri.cs" />
   </ItemGroup>
