--- a/TestAutomation.QAWorks/TestAutomation.QAWorks.Web.Test/App.config
+++ b/TestAutomation.QAWorks/TestAutomation.QAWorks.Web.Test/App.config
@@ -13,7 +13,7 @@
     <trace
       traceTimings="true"
       minTracedDuration="0:0:0.1"
-      stepDefinitionSkeletonStyle="MethodNameUnderscores" />
+      stepDefinitionSkeletonStyle="RegexAttribute" />
     <runtime
       stopAtFirstError="false"
       missingOrPendingStepsOutcome="Inconclusive" />
